# sisyphus

./: .gitignore  .gitmodules  README.md  conda-project.yml  environment.yml  pyproject.toml
sisyphus/: build.py  host.py  main.py  util.py
sisyphus/scripts/: buildwin.bat  linux-build.sh  windows-build.ps1
src/sisyphus/: build.py  host.py  main.py  util.py
