[tool.poetry]
name = "sisyphus"
version = "0.1.0"
description = "Sisyphus automates the manual parts of building GPU (CUDA) enabled packages."
authors = ["Jesse Noller <jnoller@anaconda.com>"]
readme = "README.md"
packages = [
    { include = "sisyphus" },
]
include = [
    { path = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
fabric = "^3.2.2"
requests = "^2.32.3"

[tool.poetry.scripts]
sisyphus = "sisyphus.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"