[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sisyphus"
version = "0.2.0"
description = "Automate the tedious parts of building GPU (CUDA) enabled packages."
authors = [
    {name="Jesse Noller", email="jnoller@anaconda.com"},
    {name="Denis Dupeyron", email="ddupeyron@anaconda.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click >= 8.1.7",
    "fabric >= 3.2.2",
    "githubkit >= 0.12.6",
    "requests >= 2.32.3"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sisyphus"]

[project.scripts]
sisyphus = "sisyphus.main:cli"